<resources>
    <string name="app_name">MovieRecommendation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="register_instead">Register Instead</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="Already_have_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="movie_poster">movie poster</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="connect_you">Lets connect you in.</string>
    <string name="some_description">Register link description</string>
</resources>
